==> haliwt/stm8s005k6t6_pro/User/bsp/bsp_timer.c <==
#include "stm8s.h"
#include "bsp_timer.h"
#include "bsp.h"
#define ENABLE_SYSTICK_INT()	TIM1_ITConfig(TIM1_IT_UPDATE, ENABLE)//TIM4_ITConfig(TIM4_IT_UPDATE, ENABLE)
#define DISABLE_SYSTICK_INT()	TIM1_ITConfig(TIM1_IT_UPDATE, DISABLE)//TIM4_ITConfig(TIM4_IT_UPDATE, DISABLE)
#define TMR_COUNT	4			/* 软件定时器的个数  */

void bsp_StartTimer(uint8_t _id, uint32_t _period)
{
	if (_id >= TMR_COUNT)
	{
		/* while(1); 死机 */
		return;
	}

	_period = _period / SYSTICK_PERIOD;
	if (_period == 0)
	{
		_period = 1;
	}
	
	DISABLE_SYSTICK_INT();  			/* 关中断 */

	g_Tmr[_id].Count = _period;			/* 实时计数器初值 */
	g_Tmr[_id].PreLoad = _period;		/* 计数器自动重装值，仅自动模式起作用 */
	g_Tmr[_id].Flag = 0;				/* 定时时间到标志 */
	g_Tmr[_id].Mode = TMR_ONCE_MODE;	/* 1次性工作模式 */

	ENABLE_SYSTICK_INT();  				/* 开中断 */
}

void bsp_StartAutoTimer(uint8_t _id, uint32_t _period)
{
	if (_id >= TMR_COUNT)
	{
		/* while(1); 死机 */
		return;
	}

	_period = _period / SYSTICK_PERIOD;
	if (_period == 0)
	{
		_period = 1;
	}
	
	DISABLE_SYSTICK_INT();  		/* 关中断 */

	g_Tmr[_id].Count = _period;			/* 实时计数器初值 */
	g_Tmr[_id].PreLoad = _period;		/* 计数器自动重装值，仅自动模式起作用 */
	g_Tmr[_id].Flag = 0;				/* 定时时间到标志 */
	g_Tmr[_id].Mode = TMR_AUTO_MODE;	/* 自动工作模式 */

	ENABLE_SYSTICK_INT();  		/* 开中断 */
}

void bsp_StopTimer(uint8_t _id)
{
	if (_id >= TMR_COUNT)
	{
		/* while(1); 死机 */
		return;
	}

	DISABLE_SYSTICK_INT();  	/* 关中断 */

	g_Tmr[_id].Count = 0;				/* 实时计数器初值 */
	g_Tmr[_id].Flag = 0;				/* 定时时间到标志 */
	g_Tmr[_id].Mode = TMR_ONCE_MODE;	/* 自动工作模式 */

	ENABLE_SYSTICK_INT();  		/* 开中断 */
}

uint32_t bsp_GetRunTime(void)
{
	uint16_t runtime;

	DISABLE_SYSTICK_INT();  		/* 关中断 */

	runtime = g_iRunTime;	        /* 由于在Systick中断被改写，因此关中断进行保护 */

	ENABLE_SYSTICK_INT();  		    /* 开中断 */

	return runtime;
}

void bsp_InitHardTimer(void)
{
	TIM2_TimeBaseInit(TIM2_PRESCALER_16, 0xFFFF);	/* 16分频后，计数单位为1us */
	TIM2_Cmd(ENABLE);						/* 使能TIM2 */
}

void bsp_StartHardTimer(uint8_t _CC, uint16_t _usTimeOut, void * _pCallBack)
{
    uint16_t cnt_now;
    uint16_t cnt_tar;

    /* 
        执行下面这个语句，时长 = 18us (通过逻辑分析仪测量IO翻转) 
        bsp_StartTimer2(3, 500, (void *)test1); 
    */
    if (_usTimeOut < 20)
    {
        ;
    }
    else
    {
        _usTimeOut -= 16;
    }

    cnt_now = TIM2_GetCounter();    /* 读取当前的计数器值 */
    cnt_tar = cnt_now + _usTimeOut;          /* 计算捕获的计数器值 */
    if (_CC == 1)
    {
        TIM2_SetCompare1(cnt_tar);      /* 设置捕获比较计数器CC1 */
        s_TIM2_CallBack1 = (void (*)(void))_pCallBack;
        TIM2_ITConfig(TIM2_IT_CC1, ENABLE);  /* 使能TIM2中断 */
        TIM2_ClearITPendingBit(TIM2_IT_CC1);
    }
    else if (_CC == 2)
    {
        TIM2_SetCompare2(cnt_tar);      /* 设置捕获比较计数器CC2 */
        s_TIM2_CallBack2 = (void (*)(void))_pCallBack;
        TIM2_ITConfig(TIM2_IT_CC2, ENABLE);  /* 使能TIM2中断 */
        TIM2_ClearITPendingBit(TIM2_IT_CC2);
    }
    else if (_CC == 3)
    {
        TIM2_SetCompare3(cnt_tar);      /* 设置捕获比较计数器CC3 */
        s_TIM2_CallBack3 = (void (*)(void))_pCallBack;
        TIM2_ITConfig(TIM2_IT_CC3, ENABLE);  /* 使能TIM2中断 */
        TIM2_ClearITPendingBit(TIM2_IT_CC3);
    }
    else
    {
        return;    
    }	
}
